2007-11-27  Akim Demaille  <demaille@gostai.com>

	Don't require bison --xml support.
	* bison++.in: Be robust to bison not supporting --xml.
	Be lazy when computing the html output too.

2007-11-26  Akim Demaille  <demaille@gostai.com>

	Don't require XML 2 HTML.
	* bison++.in: Be less strict when building the html output.

2007-11-26  Akim Demaille  <demaille@gostai.com>

	Use bison --xml.
	* bison++.in: Do it.
	Forget about output-to-html.  BTW,
	* output-to-html: Remove

2007-11-26  Akim Demaille  <demaille@gostai.com>

	Fix eol.
	* m4sh.mk: here.

2007-11-20  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Sync boost.m4 with upstream.
	* boost.m4: Here.

2007-11-20  Matthieu Nottale  <nottale@gostai.com>

	Properly quote function arguments.
	* children.as: Here.

2007-11-20  Akim Demaille  <akim@lrde.epita.fr>

	More distcheck flags.
	* urbi-openr.m4: Define the DISTCHECK_CONFIGURE_FLAGS in order
	to have make distcheck work when ./configure && make did.

2007-11-19  Akim Demaille  <akim@lrde.epita.fr>

	rst_run_report.
	* children.as (rst_run_report): New.
	* rst.as (rst_section, rst_subsection, rst_tab): Issue the needed
	following empty line.
	(rst_pre): Don't.

2007-11-13  Akim Demaille  <demaille@gostai.com>

	Fix run.
	* children.as: Typo in var name.

2007-11-13  Akim Demaille  <demaille@gostai.com>

	Do not rely on debug.
	* children.as: Don't expect the file debug or FD 3 to exist.

2007-11-13  Akim Demaille  <demaille@gostai.com>

	More clean files.
	* init.mk: Clean nodist_noinst_SCRIPTS.
	* rst.as: Comment.

2007-11-13  Akim Demaille  <demaille@gostai.com>

	Clean the m4sh script precursors.
	* m4sh.mk: here.

2007-11-13  Akim Demaille  <demaille@gostai.com>

	Ship the M4sh sources.
	* m4sh.mk: here.

2007-11-13  Akim Demaille  <demaille@gostai.com>

	M4sh fixes.
	* check.mk (SKIP_STATUS, HARD_STATUS): New.
	Use them.
	* init.mk (CLEANFILES): Let's add some nodist_ stuff here.
	* rst.as: Many missing M4 quotes.
	* urbi.as: Support EX_HARD and EX_SKIP.
